syntax = "proto3";

option go_package = "github.com/modern-apis-architecture/ledger/internal/api";

import "google/protobuf/timestamp.proto";

service LedgerService {
  rpc Confirmation(RequestConfirmation) returns (TransactionResponse) {}
  rpc Cancellation(RequestCancellation) returns (TransactionResponse) {}
  rpc Reversal(RequestReversal) returns (TransactionResponse) {}
}

message RequestConfirmation {
  ConfirmationTransactionData transaction = 1;
  TransactionType type = 2;
}

message RequestCancellation {
  CancellationTransactionData transaction = 1;
  TransactionType type = 2;
}

message RequestReversal {
  ReversalTransactionData transaction = 1;
  TransactionType type = 2;
}

enum TransactionType {
  REVERSAL = 0;
  CONFIRMATION = 1;
  CANCELLATION = 2;
}

enum Result {
  OK = 0;
  FAILURE = 1;
}

message TransactionResponse {
  string register_id = 1;
  Result result = 2;
}

message ConfirmationTransactionData {
  string external_id = 1;
  float value = 2;
  google.protobuf.Timestamp local_time = 3;
  string merchant_id = 4;
  string card_id = 6;
}

message CancellationTransactionData {
  string external_id = 1;
  float value = 2;
  google.protobuf.Timestamp local_time = 3;
  string merchant_id = 4;
  string card_id = 5;
}

message ReversalTransactionData {
  string external_id = 1;
  float value = 2;
  google.protobuf.Timestamp local_time = 3;
  string merchant_id = 4;
  string card_id = 6;
}


